--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-three-fiber": "^4.2.21",
+    "react-three-gui": "^0.3.1",
+    "three": "^0.120.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
