feat: Add dragon glass 3d model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,8 @@
   "editor.tabSize": 2,
   "jest.showCoverageOnLoad": true,
   "cmake.configureOnOpen": false,
+  "cSpell.words": [
+    "BGLTF",
+    "GLTF"
+  ],
 }
